--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <h1>🎹 Descubra as Notas do Acorde 🎼</h1>
+        <h1>🎹 Composição de Acordes 🎼</h1>
         <div class="clave-de-sol">𝄞</div>
 
         <input type="text" id="acordeInput" class="acorde-input" placeholder="Digite um acorde (ex: Cmaj7, Dm, F#7)" />
